2013-12-04  Teodor Zlatanov  <tzz@lifelogs.com>

	* emacs-lisp/lisp-mnt.el (lm-keywords-list): Trim whitespace
	around keywords with extra `split-string' argument.

2013-12-04  Martin Rudalics  <rudalics@gmx.at>

	* windmove.el (windmove-other-window-loc): Handle navigation
	between windows (excluding the minibuffer window - Bug#16017).

2013-12-04  Michael Albinus  <michael.albinus@gmx.de>

	* net/dbus.el (dbus-byte-array-to-string): Accept also byte arrays
	in D-Bus type syntax.
	(dbus-unescape-from-identifier): Use `byte-to-string' in order to
	preserve unibyte strings.  (Bug#16048)

2013-12-04  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/eldoc.el (eldoc-minibuffer-message):
	Call force-mode-line-update is the proper buffer (bug#16042).

2013-12-04  Dmitry Gutov  <dgutov@yandex.ru>

	* vc/log-edit.el (log-edit-add-new-comment): Rename to
	`log-edit-remember-comment', make argument optional.  Adjust all
	callers.
	(log-edit-mode): Add `log-edit-remember-comment' to
	`kill-buffer-hook' locally.
	(log-edit-kill-buffer): Don't remember comment explicitly since
	the buffer is killed anyway.

2013-12-04  Juri Linkov  <juri@jurta.org>

	* isearch.el (isearch-mode, isearch-done): Don't set arg LOCAL in
	add-hook and remove-hook for multi-buffer search.  (Bug#16035)

2013-12-03  Tom Regner <tom@goochesa.de>  (tiny change)

	* notifications.el (notifications-close-notification): Call the
	D-Bus method with ID being a `:uint32'.  (Bug#16030)

2013-12-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* net/eww.el (eww-render): Don't pass arg to eww-display-image.

2013-12-03  Juri Linkov  <juri@jurta.org>

	* progmodes/compile.el (compilation-start): Rename window alist
	entry `no-display-ok' to `allow-no-window'.

	* simple.el (shell-command): Add window alist entry
	`allow-no-window' to `display-buffer'.
	(async-shell-command): Doc fix.

	* window.el (display-buffer-no-window): New action function.
	(display-buffer-alist, display-buffer): Doc fix.  (Bug#13594)
